// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render H4 tag with core props 1`] = `
.c0 {
  width: 100%;
  color: #333;
  text-align: right;
  margin: 10px 0 10px;
  padding: 10px 20px;
  font-weight: 700;
  font-size: 30px;
  line-height: 40px;
}

<h4
  class="c0"
  color="#333"
  data-testid="test-text"
  font-size="30px"
>
  A tasty treat
</h4>
`;

exports[`Render H4 tag with fluid type props 1`] = `
.c0 {
  width: 100%;
  color: #333333;
  text-align: left;
  margin: 30px 0 10px;
  padding: 0;
  font-weight: 700;
  font-size: 60px;
  line-height: 70px;
}

@media screen and (min-width:400px) {
  .c0 {
    font-size: calc(60px + (100 - 60) * (100vw - 400px) / (1200 - 400));
    line-height: calc(70px + (110 - 70) * (100vw - 400px) / (1200 - 400));
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    font-size: 100px;
    line-height: 110px;
  }
}

<h4
  class="c0"
  color=""
  data-testid="test-text"
  font-size=""
>
  A tasty treat
</h4>
`;

exports[`Render default H4 tag and styles 1`] = `
.c0 {
  width: 100%;
  color: #333333;
  text-align: left;
  margin: 30px 0 10px;
  padding: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 21px;
}

@media screen and (min-width:400px) {
  .c0 {
    font-size: calc(14px + (23 - 14) * (100vw - 400px) / (1200 - 400));
    line-height: calc(21px + (29 - 21) * (100vw - 400px) / (1200 - 400));
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    font-size: 23px;
    line-height: 29px;
  }
}

<h4
  class="c0"
  color=""
  data-testid="test-text"
  font-size=""
>
  A tasty treat
</h4>
`;
